# scout-audit

./: .dockerignore  .gitignore  404.html  Dockerfile  Makefile  README.md  entrypoint.sh  index.html  run-tests.sh  sitemap.xml
apps/cargo-scout-audit/: Cargo.toml  build.rs  report.json  rust-toolchain  temp_report.html
apps/cargo-scout-audit/build_config/: mod.rs
apps/cargo-scout-audit/src/: cleanup.rs  detectors.rs  digest.rs  finding.rs  lib.rs  main.rs  server.rs  startup.rs
apps/cargo-scout-audit/tests/: main.rs
clippy_config/: Cargo.toml
common/detectors/: Cargo.toml
common/detectors/src/: iterators_over_indexing.rs  lib.rs  unsafe_checks.rs  unsafe_expect.rs
detectors/: Cargo.toml
detectors/avoid-dispatcherror-other/: Cargo.toml
detectors/avoid-dispatcherror-other/src/: lib.rs
detectors/common/: Cargo.toml
detectors/common/common-macros/: Cargo.toml
detectors/common/common-types/: Cargo.toml
detectors/common/src/: lib.rs
detectors/dos-unexpected-revert-with-vector/src/: lib.rs
detectors/ink/: Cargo.toml
detectors/ink-version/src/: lib.rs
detectors/ink/assert-violation/: Cargo.toml
detectors/ink/avoid-autokey-upgradable/: Cargo.toml
detectors/ink/avoid-format-string/: Cargo.toml
detectors/ink/avoid-unsafe-block/: Cargo.toml
detectors/ink/delegate-call/: Cargo.toml
detectors/ink/detectors/: Cargo.toml
detectors/ink/divide-before-multiply/: Cargo.toml
detectors/ink/docs/: pnpm-lock.yaml
detectors/ink/dont-use-instantiate-contract-v1/: Cargo.toml
detectors/ink/dos-unbounded-operation/: Cargo.toml
detectors/ink/dos-unexpected-revert-with-vector/: Cargo.toml
detectors/ink/incorrect-exponentiation/: Cargo.toml
detectors/ink/ink-version/: Cargo.toml
detectors/ink/integer-overflow-or-underflow/: Cargo.toml
detectors/ink/iterators-over-indexing/: Cargo.toml
detectors/ink/lazy-delegate/: Cargo.toml
detectors/ink/lazy-values-not-set/: Cargo.toml
detectors/ink/panic-error/: Cargo.toml
detectors/ink/reentrancy-1/: Cargo.toml
detectors/ink/reentrancy-2/: Cargo.toml
detectors/ink/scripts/: run-tests.py
detectors/ink/set-code-hash/: Cargo.toml
detectors/ink/test-cases/: Cargo.toml
detectors/ink/unprotected-mapping-operation/: Cargo.toml
detectors/ink/unprotected-self-destruct/: Cargo.toml
detectors/ink/unsafe-expect/: Cargo.toml
detectors/ink/vec-could-be-mapping/: Cargo.toml
detectors/ink/warning-sr25519-verify/: Cargo.toml
detectors/ink/zero-or-test-address/: Cargo.toml
detectors/integer-overflow-or-underflow/src/: lib.rs
detectors/iterators-over-indexing/src/: lib.rs
detectors/known-vulnerabilities/src/: lib.rs
detectors/reentrancy-2/src/: lib.rs
detectors/rust/known-vulnerabilities/: Cargo.toml
detectors/rust/unsafe-expect/: Cargo.toml
detectors/rust/unsafe-unwrap/: Cargo.toml
detectors/set-code-hash/src/: lib.rs
detectors/soroban/avoid-core-mem-forget/: Cargo.toml
detectors/soroban/avoid-panic-error/: Cargo.toml
detectors/soroban/detectors/: Cargo.toml
detectors/soroban/divide-before-multiply/: Cargo.toml
detectors/soroban/dynamic-storage/: Cargo.toml
detectors/soroban/front-running/: Cargo.toml
detectors/soroban/incorrect-exponentiation/: Cargo.toml
detectors/soroban/iterators-over-indexing/: Cargo.toml
detectors/soroban/overflow-check/: Cargo.toml
detectors/soroban/scripts/: run-tests.py
detectors/soroban/set-contract-storage/: Cargo.toml
detectors/soroban/soroban-version/: Cargo.toml
detectors/soroban/test-cases/: Cargo.toml
detectors/soroban/token-interface-events/: Cargo.toml
detectors/soroban/unnecessary-lint-allow/: Cargo.toml
detectors/soroban/unprotected-update-current-contract-wasm/: Cargo.toml
detectors/soroban/unrestricted-transfer-from/: Cargo.toml
detectors/soroban/unsafe-expect/: Cargo.toml
detectors/soroban/unsafe-map-get/: Cargo.toml
detectors/soroban/unsafe-unwrap/: Cargo.toml
detectors/substrate-pallets/: Cargo.toml  LICENSE  README.md
detectors/substrate-pallets/avoid-dispatcherror-other/: Cargo.toml
detectors/substrate-pallets/detectors/: Cargo.toml
detectors/substrate-pallets/inconsistent-extrinsic-weight-name/: Cargo.toml
detectors/substrate-pallets/integer-overflow-or-underflow/: Cargo.toml
detectors/substrate-pallets/invalid-extrinsic-weight/: Cargo.toml
detectors/substrate-pallets/missing-zero-check/: Cargo.toml
detectors/substrate-pallets/scripts/: run-tests.py  validate-detectors.py
detectors/substrate-pallets/test-cases/: basic.tar.xz
detectors/substrate-pallets/unsafe-unwrap/: Cargo.toml
detectors/substrate-pallets/unsigned-extrinsic/: Cargo.toml
detectors/substrate-pallets/utils/: Cargo.toml
detectors/token-interface-inference/src/: lib.rs
detectors/unsafe-expect/: Cargo.toml
detectors/unsafe-expect/src/: lib.rs
scout-audit-clippy-utils/: Cargo.toml  README.md
scout-audit-clippy-utils/src/: ast_utils.rs  attrs.rs  check_proc_macro.rs  consts.rs  diagnostics.rs  eager_or_lazy.rs  higher.rs  hir_utils.rs  lib.rs  macros.rs  msrvs.rs  numeric_literal.rs  paths.rs  qualify_min_const_fn.rs  source.rs  str_utils.rs  sugg.rs  ty.rs  usage.rs  visitors.rs
scout-audit-clippy-wrappers/: Cargo.toml  rust-toolchain
scout-audit-clippy-wrappers-ink/: Cargo.toml
scout-audit-clippy-wrappers-ink/src/: lib.rs
scout-audit-clippy-wrappers/src/: lib.rs
scout-audit-dylint-linting/: Cargo.toml
scout-audit-dylint-linting/src/: lib.rs
scout-utils/: Cargo.toml
scout-utils/src/: lib.rs
test-cases/: Cargo.toml  basic.tar.xz
test-cases/assert-violation/: Cargo.toml
test-cases/avoid-panic-error/: Cargo.toml
test-cases/delegate-call/: Cargo.toml
test-cases/front-running/: Cargo.toml
test-cases/ink/: Cargo.toml
test-cases/integer-overflow-or-underflow/: Cargo.toml
test-cases/known-vulnerabilities/: Cargo.toml  output.txt
test-cases/soroban/: Cargo.toml
test-cases/substrate-pallets/: basic.tar
test-cases/token-interface-events/: Cargo.toml
test-cases/unnecessary-admin-parameter/: Cargo.toml
test-cases/unsafe-expect/: Cargo.toml
test-cases/unsafe-map-get/: Cargo.toml
(+2368 files in other folders)
