[package]
name = "scout-audit-clippy-config"
description = "Clippy config republish to be used by scout-audit-clippy-utils"
version = "0.1.76"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-clippy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-semver = "1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"

[dev-dependencies]
walkdir = "2.3"

[features]
deny-warnings = []

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
