[package]
name = "scout-audit-clippy-utils"
version = "0.2.3"
edition = "2021"
publish = true
description = "Clippy utils republish to be used by scout-audit-internal"
license = "MIT OR Apache-2.0"

[dependencies]
clippy_config = { package = "scout-audit-clippy-config", version = "0.1.76" }
arrayvec = { version = "0.7", default-features = false }
itertools = "0.11"
rustc-semver = "1.1"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
