[package]
name = "scout-audit-clippy-wrappers-ink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "99c7838" }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
capture-stdio = "0.1.1"
