[package]
name = "scout-audit-clippy-wrappers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "51a1cf0" }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
capture-stdio = "0.1.1"
