[workspace]
exclude = [".cargo", ".vscode", "target"]
members = ["*"]
resolver = "2"

[workspace.dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "99c7838" }
common = { path = "../../common" }
common_detectors = { path = "../../common/detectors", package = "common-detectors" }
dylint_internal = "=2.6.1"
dylint_linting = "=3.0.1"
if_chain = "=1.0.2"
itertools = { version = "=0.13" }
