[workspace]
exclude = [".cargo", "overflow-check", "soroban-version", "target"]
members = [
    "*/remediated/remediated-*",
    "*/vulnerable/vulnerable-*",
    "contract-import-dependency/remediated/dependency-contract",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
soroban-sdk = { version = "=21.7.6" }
soroban-token-sdk = { version = "=21.7.6" }

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
strip = "symbols"

[profile.release-with-logs]
debug-assertions = true
inherits = "release"
