[workspace]
exclude = [".cargo", "target", ".vscode"]
members = ["*"]

[workspace.dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "99c7838" }
clippy_wrappers = { package = "scout-audit-clippy-wrappers-ink", path = "../../../scout-audit-clippy-wrappers-ink" }
if_chain = "=1.0.2"
itertools = { version = "=0.13" }
scout-audit-dylint-linting = { path = "../../../scout-audit-dylint-linting" }
