[workspace]
exclude = [".cargo", ".vscode", "target"]
members = ["*"]

[workspace.dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "51a1cf0" }
clippy_wrappers = { package = "scout-audit-clippy-wrappers", git = "https://github.com/CoinFabrik/scout-audit/", rev = "d2d0748a08517cb02668c59dfec35ecf9f63f467" }
common = { path = "../../common" }
dylint_internal = "=3.1.2"
dylint_linting = "=3.1.2"
if_chain = "=1.0.2"
itertools = { version = "=0.13" }
