[package]
edition = "2021"
name = "iterators-over-indexing"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { workspace = true }
common = { workspace = true }
common_detectors = { workspace = true }
dylint_internal = { workspace = true }
dylint_linting = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
