[package]
edition = "2021"
name = "unnecessary-lint-allow"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { workspace = true }
common = { workspace = true }
dylint_internal = { workspace = true }
dylint_linting = { workspace = true }
if_chain = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.120"

[package.metadata.rust-analyzer]
rustc_private = true
