[workspace]
exclude = [".cargo", ".vscode", "target"]
members = ["*"]
resolver = "2"

[workspace.dependencies]
cargo_metadata = "=0.18.1"
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "51a1cf0" }
clippy_wrappers = { package = "scout-audit-clippy-wrappers", path = "../../../scout-audit-clippy-wrappers" }
if_chain = "=1.0.2"
itertools = { version = "=0.13" }
reqwest = { version = "=0.11.27", features = ["blocking"] }
rustsec = "=0.29.3"
scout-audit-dylint-linting = { path = "../../../scout-audit-dylint-linting" }
serde_json = "=1.0.120"
utils = { path = "../utils" }
