[package]
edition = "2021"
name = "inconsistent-extrinsic-weight-name"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { workspace = true }
common = { workspace = true }
dylint_linting = { workspace = true }
if_chain = { workspace = true }
common_utils = { path = "../../../common/utils", package = "common-utils" }

[package.metadata.rust-analyzer]
rustc_private = true
