[package]
edition = "2021"
name = "invalid-extrinsic-weight"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { workspace = true }
common = { workspace = true }
dylint_linting = { workspace = true }
if_chain = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
