[package]
name = "cargo-scout-audit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cargo.workspace = true
cargo_metadata = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
cli-args.path = "../cli-args"
config.path = "../config"
interop.path = "../interop"
lazy_static = { workspace = true }
regex = { workspace = true, features = ["unicode"] }
scout.path = "../scout"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tempfile.workspace = true
terminal_color_builder.workspace = true
thiserror = { workspace = true }
tracing = { workspace = true }
util.path = "../util"
uuid = { workspace = true, features = ["v4"] }
