[package]
edition = "2024"
name = "cargo-scout-audit"
version.workspace = true
license = "MIT"
repository.workspace = true
keywords.workspace = true
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
description = "Scout is an extensible open-source tool intended to assist Ink! and Soroban smart contract developers and auditors detect common security issues and deviations from best practices."
readme = "../../../../README.md"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
ansi_term = { workspace = true }
anyhow = { workspace = true }
cargo.workspace = true
cargo_metadata = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
current_platform = { workspace = true }
dunce = { workspace = true }
git2 = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
libloading = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true, features = ["unicode"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tempfile.workspace = true
tera = { workspace = true }
terminal_color_builder.workspace = true
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
webbrowser = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_System_LibraryLoader"] }
home.workspace = true

[features]
docker_container = []
