[package]
name = "util"
edition = "2024"
repository.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
ansi_term.workspace = true
anyhow.workspace = true
cargo_metadata.workspace = true
colored.workspace = true
home.workspace = true
libloading.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
tempfile.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
cargo.workspace = true
thiserror.workspace = true
