[package]
edition = "2021"
name = "known-vulnerabilities"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { workspace = true }
clippy_wrappers = { workspace = true }
if_chain = { workspace = true }
scout-audit-dylint-linting = { workspace = true }
rustsec = { workspace = true }
serde_json = { workspace = true }
cargo_metadata = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
